[package]
name = "rustual-boy"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>", "The Rustual Boy contributors"]
description = "A Virtual Boy emulator."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/emu-rs/rustual-boy"
homepage = "https://github.com/emu-rs/rustual-boy"

[features]
logging = []

[dependencies]
encoding = "0.2"
nom = "^1.2.3"
minifb = "0.9.0"
cpal = "0.4.2"
futures = "0.1.1"
