[package]
name = "rustual-boy-cli"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>", "The Rustual Boy contributors"]
description = "A CLI frontend for rustual-boy-core"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/emu-rs/rustual-boy"
homepage = "https://github.com/emu-rs/rustual-boy"

[features]
logging = []

[dependencies]
encoding = "0.2"
minifb = "0.9.0"
cpal = "0.4.4"
futures = "0.1.1"
rustual-boy-middleware = { path = "../rustual-boy-middleware" }
rustual-boy-core = { path = "../rustual-boy-core" }
clap = "2.0.0"
combine = "2.2.0"
