[package]
name = "rustual-boy-cli"
version = "0.3.0"
authors = ["ferris <yupferris@gmail.com>", "The Rustual Boy contributors"]
description = "A CLI frontend for rustual-boy-core"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/emu-rs/rustual-boy"
homepage = "https://github.com/emu-rs/rustual-boy"

[features]
log-cli = []
log-core-cpu = ["rustual-boy-core/log-cpu"]
log-core-gamepad = ["rustual-boy-core/log-gamepad"]
log-core-ic = ["rustual-boy-core/log-ic"]
log-core-vip = ["rustual-boy-core/log-vip"]
log-core-vsu = ["rustual-boy-core/log-vsu"]
log-core-other = ["rustual-boy-core/log-other"]
log-core-all = ["rustual-boy-core/log-all"]

[dependencies]
encoding = "0.2"
minifb = "0.9.0"
cpal = "0.4.4"
futures = "0.1.1"
rustual-boy-middleware = { path = "../rustual-boy-middleware" }
rustual-boy-core = { path = "../rustual-boy-core" }
clap = "2.0.0"
combine = "2.2.0"
