[package]
name = "rustual-boy-core"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>", "The Rustual Boy contributors"]
description = "The core of Rustual Boy, a Virtual Boy emulator"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/emu-rs/rustual-boy"
homepage = "https://github.com/emu-rs/rustual-boy"

[features]
log-cpu = []
log-gamepad = []
log-ic = []
log-vip = []
log-vsu = []
log-other = []
log-all = ["log-cpu", "log-gamepad", "log-ic", "log-vip", "log-vsu", "log-other"]

[dependencies]
encoding = "0.2"
