[package]
name = "rustual-boy-libretro"
version = "0.1.0"
authors = ["Sebastian Reinhard <sebastian@sebbert.me>"]

[lib]
name = "rustual_boy_libretro"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.*"
rustual-boy-core = { path = "../rustual-boy-core" }
rustual-boy-serialization = { path = "../rustual-boy-serialization" }
