[package]
name = "rustual-boy-middleware"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>", "The Rustual Boy contributors"]
description = "Some useful utilities for implementing Rustual Boy frontends"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/emu-rs/rustual-boy"
homepage = "https://github.com/emu-rs/rustual-boy"

[dependencies]
rustual-boy-core = { path = "../rustual-boy-core" }
